--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - fotos/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -70,8 +71,13 @@ flutter:
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+  fonts:
+    - family: Redressed-Regular
+      fonts:
+        - asset: fonts/Redressed-Regular.ttf
+    - family: Adventure 400
+      fonts:
+          - asset: fonts/Adventure 400.otf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
