--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_spinkit: "^4.1.2"
   path_provider: ^1.6.27
   url_launcher: ^5.4.2
+  photo_view: ^0.9.2
 
 
   # The following adds the Cupertino Icons font to your application.
