--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,13 @@ dependencies:
   flutter_launcher_icons: ^0.9.0
 
 
+flutter_icons:
+  image_path: "fotos/Logo.png"
+  android: true # can specify file name here e.g. "ic_launcher"
+  ios: true # can specify file name here e.g. "My-Launcher-Icon"  fotos/mapablan.jpg
+  adaptive_icon_background: "fotos/Logo.png"
+  adaptive_icon_foreground: "fotos/Logo.png"
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
